fix: spacing and text

--- a/src/pages/newsletter.module.css
+++ b/src/pages/newsletter.module.css
@@ -4,7 +4,7 @@
 }
 
 .block {
-    margin-top: 5rem;
+    margin-top: 3rem;
 }
 
 .text-header {
